# ann_arbor_watermain_break_predictions

./: README.md  pyproject.toml
data/raw/: All_Watermains_Attributes.csv  Allen_Creek_Discharge.csv  Allen_Creek_Gage_Height.csv  Allen_Creek_Stream_Water_Level.csv  Allen_Creek_Velocity.csv  Ann_Arbor_Water_Plant_Flows.csv  Atlas14_PrecipitationFrequencyEstimates_Inches.csv  Atlas14_PrecipitationFrequencyEstimates_Intensity_inches_hour.csv  Barton_Pond_Monitoring_Data.csv  Barton_Pond_PFAs_updated.csv  Drinking_Water_Intake_PFAs_updated.csv  Drinking_Water_Intake_Quality_Data_2019_2020.csv  Drinking_Water_Intake_Quality_Data_2021_2022.csv  HourlyTotals_AAStation.csv  HourlyTotals_DetroitStation.csv  Hourly_Air_Quality_Measures.csv  Hourly_Rainfall_City_of_Ann_Arbor.csv  Huron_River_Discharge.csv  Huron_River_Gage_Height.csv  Huron_River_Stream_Water_Level.csv  Malletts_Creek_Discharge.csv  Malletts_Creek_Gage_Height.csv  Malletts_Creek_Stream_Water_Level.csv  Waste_Water_Scan_Data.csv  Water_Quality_Pressure_Requests.csv  Water_and_Sewer_Consumption.csv  Watermain_Attributes_Soil_Ph.csv  Watermain_Breaks_Labor.csv  Watermain_Breaks_Reporting.csv
data/transformed/: all_mains.csv  watermain_breaks_dataset.csv  watermain_breaks_test.csv  watermain_breaks_train.csv  watermain_breaks_validation.csv
models/: 01_baseline.ipynb  02_models.ipynb  02_models_clean.ipynb  02_svm.ipynb  top_15.csv  top_152.csv
notebooks/: 01_EDA.ipynb  02_train_val_test_split.ipynb  03_svm_model.ipynb
src/: utils.py
