[tool.poetry]
name = "watermain_breaks"
version = "0.1.0"
description = ""
authors = ["Coulton Theuer <theuerc@umich.edu>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
xgboost = "^2.0.1"
catboost = "^1.2.2"
tqdm = "^4.66.1"
ipykernel = "^6.26.0"
pyarrow = "^14.0.1"
requests = "^2.31.0"
dask = "^2023.10.1"
fastparquet = "^2023.10.1"
lightgbm = "^4.1.0"
pytest = "^7.4.3"
jupyter = "^1.0.0"
kaggle = "^1.5.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
